--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
         "orchestra/testbench": "^5.0",
-        "../../../vendor/phpunit/phpunit": "^9.0",
+        "phpunit/phpunit": "^9.0",
         "psalm/plugin-laravel": "^1.2",
         "vimeo/psalm": "^3.11"
     },
